# proxy-devops

./: .pre-commit-config.yaml  Cargo.toml  DEBUG.md  README.md  deny.toml
.github/: RELEASE.md  dependabot.yml
.github/workflows/: build.yml  release.yml  security.yml
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
plugins/k8s_native_port_forward/: Cargo.toml  README.md
plugins/k8s_native_port_forward/src/: lib.rs
plugins/k8s_port_forward/: Cargo.toml
plugins/k8s_port_forward/src/: lib.rs
plugins/ollama_chat/: Cargo.toml
plugins/ollama_chat/src/: lib.rs
plugins/proxy_plugin/: Cargo.toml
plugins/proxy_plugin/src/: lib.rs
scripts/: setup-pre-commit.sh
src/: main.rs
