[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
plugin_api = { path = "./plugin_api" }
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "plugin_api",
    "plugins/proxy_plugin"
]
