[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
description = "A pluggable command-line proxy tool with dynamic plugin system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/proxy"
homepage = "https://github.com/your-username/proxy"
documentation = "https://github.com/your-username/proxy/blob/main/README.md"
keywords = ["proxy", "cli", "plugins", "kubernetes"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
libloading = "0.8"
plugin_api = { path = "./plugin_api" }
clap = { version = "4", features = ["derive"] }
dirs = "5"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "plugin_api",
    "plugins/k8s_port_forward",
    "plugins/k8s_native_port_forward",
    "plugins/ollama_chat"
]
