[package]
name = "k8s_port_forward"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin_api = { path = "../../plugin_api" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
kube = { version = "0.91", features = ["runtime", "derive"] }
tokio = { version = "1", features = ["full"] }
k8s-openapi = { version = "0.25", features = ["v1_26"] }
ctrlc = "3.4"
libc = "0.2"
