[package]
name = "ollama_chat"
version = "0.1.0"
edition = "2021"
description = "Interactive streaming chat interface for Ollama"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin_api = { path = "../../plugin_api" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
futures = "0.3"
crossterm = "0.29"
ctrlc = "3.4"
